--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
                         <a class="nav-link" href="#">Services</a>
                     </li>
                     <li class="nav-item">
+  <a class="nav-link" href="#events">Events</a>
+</li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="game-library.html">Games</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
+                        <a href="booking.html" class="btn custom-button-filled ms-lg-3">Book now</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +72,7 @@
                     café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast
                     ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
                     you covered.</p>
-                <a href="booking.html" class="btn btn-primary mb-4">Book now</a>
+                <a href="booking.html" class="btn custom-button-outline mb-4">Book now</a>
             </div>
             <div class="col-12 col-xl-6">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -191,6 +195,76 @@
                 </div>
             </div>
         </section>
+        <!-- Events section -->
+<section id="events" class="container section">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h2 class="display-6">Join our events</h2>
+    </div>
+
+    <div class="col-12">
+      <p>
+        Whether you're delving into dungeons, reliving classic games, or competing in high-stakes tournaments, there's something for every gamer. Reservations are recommended to ensure your spot at the table. Student discounts are available, so bring your student ID and enjoy more gaming for less.
+      </p>
+      <p>
+        Outside scheduled events, our shop remains open for regular play. Join us anytime to discover new games and meet fellow enthusiasts.
+      </p>
+    </div>
+
+    <div class="col-12">
+      <h3 class="sub-heading-color">Event schedule</h3>
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">Event</th>
+              <th scope="col">Date</th>
+              <th scope="col">Time</th>
+              <th scope="col">Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Dungeons & Dragons</td>
+              <td>Tuesdays</td>
+              <td>8pm - 11pm</td>
+              <td>€25 for 6 sessions</td>
+            </tr>
+            <tr>
+              <td>Retro Game Night</td>
+              <td>Thursdays</td>
+              <td>8pm - 11pm</td>
+              <td>€5 per person*</td>
+            </tr>
+            <tr>
+              <td>Tournaments</td>
+              <td>Last Sunday of the month</td>
+              <td>12pm - 7pm</td>
+              <td>€10 per person</td>
+            </tr>
+          </tbody>
+        </table>
+        
+<div class="row mt-3">
+  <!-- Student discount button -->
+  <div class="col-12 col-md-6 offset-md-6 text-center text-md-end mb-3">
+    <a href="booking.html" class="btn custom-button-filled w-100 w-lg-auto fst-italic">
+      Get 20% off with valid student ID
+    </a>
+  </div>
+
+  <!-- Book now button -->
+  <div class="col-12 text-center">
+    <a href="booking.html" class="btn custom-button-outline">Book now</a>
+  </div>
+</div>
+
+
+      </div>
+    </div>
+  </div>
+</section>
+
     </main>
 
     <!-- Footer / contact section -->
