--- a/game-library.html
+++ b/game-library.html
@@ -223,6 +223,58 @@
                 </div>
             </div>
         </section>
+        <!-- Game reservation form section -->
+<section id="game-reservation" class="container section py-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-lg-8">
+      <h2 class="text-center mb-4">Reserve a game</h2>
+      <p class="text-center mb-5">
+        Reserve a board game for your next visit to Boardwalk Games. Pick your challenge, and let the adventure begin! Fill out your details and preferred game below, and we'll have it set aside for you when you arrive.
+      </p>
+      <form action="success.html" method="GET">
+        <div class="row">
+          <div class="col-12 col-md-6 mb-3">
+            <label for="full-name" class="form-label">Full name</label>
+            <input type="text" id="full-name" name="full-name" class="form-control" required>
+          </div>
+          <div class="col-12 col-md-6 mb-3">
+            <label for="phone" class="form-label">Phone number</label>
+            <input type="tel" id="phone" name="phone" class="form-control" required>
+          </div>
+          <div class="col-12 col-md-6 mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" id="email" name="email" class="form-control" required>
+          </div>
+          <div class="col-12 col-md-6 mb-3">
+            <label for="game-selection" class="form-label">Select a game</label>
+            <select id="game-selection" name="game-selection" class="form-select" required>
+              <option value="" selected disabled>Select game</option>
+              <option value="galaxy-pioneers">Galaxy Pioneers</option>
+              <option value="mystic-woods">Mystic Woods</option>
+              <option value="captains-gambit">Captain's Gambit</option>
+              <option value="critter-quest">Critter Quest</option>
+              <option value="setters-of-catan">Setters of Catan</option>
+              <option value="monopoly">Monopoly</option>
+              <option value="exploding-kittens">Exploding Kittens</option>
+              <option value="cluedo">Cluedo</option>
+            </select>
+          </div>
+          <div class="col-12 mb-3">
+            <label for="requested-date" class="form-label">Requested date</label>
+            <input type="date" id="requested-date" name="requested-date" class="form-control" required>
+          </div>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn custom-button-outline">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
+
+
+
+
     </main>
 
     <!-- footer / contact section -->
